--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -4,7 +4,10 @@
 {% if locale == 'zh' %}
 {% set codeofconduct = '/code-of-conduct' %}
 {% endif %}
+<div class='wrapper'>
 <a href='{{ codeofconduct }}' target="_self">Code Of Conduct</a>
 <a href='http://jsconf.cn' target="new">JSConf.cn</a>
 <a href='https://creativecommons.org/licenses/by/3.0/' target="new">CCA 3.0 License</a>
 <a href='http://wiredcraft.com' target="new">Built by Wiredcraft</a>
+<p><span>{{ footer.qrcode }}</span><img src='/images/qrcode.png'/></p>
+</div>
