--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,17 @@
     <div class='wrapper'>
       <p>{{ about.content | raw }}</p>
     </div>
+    <div class='timeline'>
+      <div class='wrapper'>
+        <ul>
+          <li><a href='http://2012.jsconf.cn' target='new'><h4>{{ timeline.item1 }}</h4><em>2012</em></a></li>
+          <li><a href='http://2013.jsconf.cn' target='new'><h4>{{ timeline.item2 }}</h4><em>2013</em></a></li>
+          <li><a href='http://2014.jsconf.cn' target='new'><h4>{{ timeline.item3 }}</h4><em>2014</em></a></li>
+          <li class='active'><a href='http://2015.jsconf.cn' target='new'><h4>{{ timeline.item4 }}</h4><em>2015</em></a></li>
+        </ul>
+      </div>
+      <div class='line'></div>
+    </div>
   </section>
   <!-- Banner -->
   <section class='banner first'>
@@ -343,13 +354,12 @@
     </div>
     <div class='wrapper'>
     <ul>
-      <li><a href='#' target='new'><img src='/images/logo1.png' /></a></li>
-      <li><a href='#' target='new'><img src='/images/logo2.png' /></a></li>
-      <li><a href='#' target='new'><img src='/images/logo3.png' /></a></li>
-      <li><a href='#' target='new'><img src='/images/logo2.png' /></a></li>
-      <li><a href='#' target='new'><img src='/images/logo3.png' /></a></li>
-      <li><a href='#' target='new'><img src='/images/logo2.png' /></a></li>
-      <li><a href='#' target='new'><img src='/images/logo1.png' /></a></li>
+      <li><a href='http://wiredcraft.com/' target='new'><img src='/images/wiredcraft.png' width='250' /></a></li>
+      <li><a href='http://www.qiniu.com/' target='new'><img src='/images/qiniu.png' width="250" /></a></li>
+      <li><a href='http://bearyinnovative.com/' target='new'><img src='/images/bearyinnovative.png' height='130' /></a></li>
+      <li><a href='https://coding.net/' target='new'><img src='/images/coding.png' width='250' /></a></li>
+      <li><a href='http://careers.ef.com/categories/technology/learning-labs/' target='new'><img src='/images/ef.png' width='130' /></a></li>
+      <li><a href='https://coding.net/' target='new'><img src='/images/teambition.png' width='250' /></a></li>
     </ul>
     </div>
   </section>
@@ -360,13 +370,8 @@
     </div>
     <div class='wrapper'>
     <ul>
-      <li><a href='#' target='new'><img src='/images/logo1.png' /></a></li>
-      <li><a href='#' target='new'><img src='/images/logo2.png' /></a></li>
-      <li><a href='#' target='new'><img src='/images/logo1.png' /></a></li>
-      <li><a href='#' target='new'><img src='/images/logo3.png' /></a></li>
-      <li><a href='#' target='new'><img src='/images/logo1.png' /></a></li>
-      <li><a href='#' target='new'><img src='/images/logo2.png' /></a></li>
-      <li><a href='#' target='new'><img src='/images/logo3.png' /></a></li>
+      <li><a href='http://segmentfault.com/' target='new'><img src='/images/sf.png' width='250' /></a></li>
+      <li><a href='https://knewone.com/' target='new'><img src='/images/knewone.png' width="250" /></a></li>
     </ul>
     </div>
   </section>
