--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -1444,288 +1444,6 @@ input:not([type=submit]), textarea {
             #header .hero .wrapper h1 + p, #header-new .hero .wrapper h1 + p {
               font-size: 18px;
               font-size: 1.8rem; } }
-    #header .hero .parallax, #header-new .hero .parallax {
-      bottom: 0px;
-      height: 100%;
-      position: absolute;
-      width: 100%; }
-      #header .hero .parallax .scene, #header-new .hero .parallax .scene {
-        height: 100%;
-        padding: 0;
-        margin: 0;
-        overflow: hidden; }
-        #header .hero .parallax .scene .layer, #header-new .hero .parallax .scene .layer {
-          bottom: 0px;
-          width: 100%;
-          height: 100%; }
-          #header .hero .parallax .scene .layer .city, #header-new .hero .parallax .scene .layer .city {
-            bottom: 0px;
-            background-position: center bottom;
-            background-repeat: no-repeat;
-            height: 100%;
-            left: 50%;
-            position: absolute;
-            margin-left: -864px;
-            width: 1728px; }
-            @media only screen and (min-width: 769px) and (max-width: 1350px) {
-              #header .hero .parallax .scene .layer .city, #header-new .hero .parallax .scene .layer .city {
-                margin-left: -624px;
-                width: 1248px; } }
-            @media only screen and (max-width: 768px) {
-              #header .hero .parallax .scene .layer .city, #header-new .hero .parallax .scene .layer .city {
-                margin-left: -480px;
-                width: 960px; } }
-          #header .hero .parallax .scene .layer .cloud, #header-new .hero .parallax .scene .layer .cloud {
-            background-repeat: no-repeat;
-            background-size: contain;
-            height: 100px;
-            position: absolute;
-            -webkit-animation: cloud 3s 0.1s infinite alternate cubic-bezier(0.455, 0.33, 0.515, 0.955);
-            -moz-animation: cloud 3s 0.1s infinite alternate cubic-bezier(0.455, 0.03, 0.415, 0.955);
-            animation: cloud 3s 0.1s infinite alternate cubic-bezier(0.455, 0.03, 0.515, 0.955); }
-            @media only screen and (min-width: 769px) and (max-width: 1350px) {
-              #header .hero .parallax .scene .layer .cloud, #header-new .hero .parallax .scene .layer .cloud {
-                width: 100px !important; } }
-            @media only screen and (max-width: 768px) {
-              #header .hero .parallax .scene .layer .cloud, #header-new .hero .parallax .scene .layer .cloud {
-                width: 70px !important; } }
-          #header .hero .parallax .scene .layer:nth-child(1) div, #header-new .hero .parallax .scene .layer:nth-child(1) div {
-            background-image: url('/images/parallax/layer2.png');
-            background-size: contain; }
-          #header .hero .parallax .scene .layer:nth-child(2) div, #header-new .hero .parallax .scene .layer:nth-child(2) div {
-            background-image: url('/images/parallax/layer3.png');
-            background-size: contain; }
-          #header .hero .parallax .scene .layer:nth-child(3) div, #header-new .hero .parallax .scene .layer:nth-child(3) div {
-            background-image: url('/images/parallax/layer1.png');
-            background-size: contain; }
-          #header .hero .parallax .scene .layer:nth-child(4) div, #header-new .hero .parallax .scene .layer:nth-child(4) div {
-            background-image: url('/images/parallax/cloud1.png');
-            width: 148px;
-            left: 10%;
-            opacity: 0.6;
-            top: 30%;
-            -webkit-animation-duration: 2s;
-            animation-duration: 2s;
-            -moz-animation-duration: 2s; }
-          #header .hero .parallax .scene .layer:nth-child(5) div, #header-new .hero .parallax .scene .layer:nth-child(5) div {
-            background-image: url('/images/parallax/cloud2.png');
-            width: 147px;
-            left: 20%;
-            opacity: 0.4;
-            top: 20%;
-            -webkit-animation-duration: 3s;
-            animation-duration: 3s;
-            -moz-animation-duration: 3s; }
-          #header .hero .parallax .scene .layer:nth-child(6) div, #header-new .hero .parallax .scene .layer:nth-child(6) div {
-            background-image: url('/images/parallax/cloud3.png');
-            width: 162px;
-            left: 80%;
-            opacity: 0.5;
-            top: 40%;
-            -webkit-animation-duration: 4s;
-            animation-duration: 4s;
-            -moz-animation-duration: 4s; }
-    #header .hero .arrow.down, #header-new .hero .arrow.down {
-      background: #fff;
-      border-radius: 50%;
-      bottom: 70px;
-      cursor: pointer;
-      height: 50px;
-      position: absolute;
-      left: 50%;
-      margin-left: -20px;
-      opacity: 0.8;
-      width: 50px;
-      -webkit-transition: all, 0.5s, ease;
-      -moz-transition: all, 0.5s, ease;
-      transition: all, 0.5s, ease; }
-      #header .hero .arrow.down:after, #header-new .hero .arrow.down:after {
-        font-family: 'icons';
-        font-variant: normal;
-        font-weight: normal;
-        speak: none;
-        text-transform: none;
-        -webkit-font-smoothing: antialiased;
-        content: 'd';
-        color: #5399fc;
-        font-size: 20px;
-        font-size: 2rem;
-        left: 15px;
-        position: absolute;
-        text-align: center;
-        top: 15px;
-        width: 20px;
-        -webkit-animation: arrow 1s 0.1s infinite alternate cubic-bezier(0.455, 0.33, 0.515, 0.955);
-        -moz-animation: arrow 1s 0.1s infinite alternate cubic-bezier(0.455, 0.03, 0.415, 0.955);
-        animation: arrow 1s 0.1s infinite alternate cubic-bezier(0.455, 0.03, 0.515, 0.955); }
-      #header .hero .arrow.down:hover, #header-new .hero .arrow.down:hover {
-        bottom: 60px;
-        box-shadow: rgba(0, 0, 0, 0.2) 0 3px 5px 0;
-        opacity: 0.9; }
-      #header .hero .arrow.down:active, #header-new .hero .arrow.down:active {
-        bottom: 70px; }
-
-/* Content */
-#content .section {
-  padding: 100px 0; }
-  @media only screen and (max-width: 768px) {
-    #content .section {
-      padding: 60px 5%; } }
-#content .action {
-  background: #DBEAFF; }
-  #content .action .wrapper {
-    color: #5399fc;
-    text-align: center; }
-    #content .action .wrapper h2 {
-      color: #5399fc;
-      font-weight: normal;
-      font-size: 24px;
-      font-size: 2.4rem; }
-    #content .action .wrapper form * {
-      display: inline-block;
-      vertical-align: middle; }
-    #content .action .wrapper form {
-      height: 48px;
-      margin-bottom: 60px; }
-      #content .action .wrapper form .button, #content .action .wrapper form input:not([type=submit]) {
-        border: 0;
-        line-height: 200%;
-        font-family: 'Roboto', Arial, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
-        font-size: inherit;
-        padding: 10px 30px; }
-      #content .action .wrapper form .button {
-        border-radius: 0 40px 40px 0;
-        margin-left: -5px; }
-        @media only screen and (max-width: 768px) {
-          #content .action .wrapper form .button {
-            font-size: 12px;
-            font-size: 1.2rem;
-            padding: 10px 10px;
-            width: 90px; } }
-      #content .action .wrapper form input:not([type=submit]) {
-        background: #FFF;
-        border-radius: 40px 0 0 40px;
-        color: #4d4d4d;
-        padding: 10px 25px;
-        width: 200px; }
-        @media only screen and (max-width: 768px) {
-          #content .action .wrapper form input:not([type=submit]) {
-            font-size: 12px;
-            font-size: 1.2rem;
-            padding: 10px 15px;
-            width: 138px; } }
-      #content .action .wrapper form ::-webkit-input-placeholder {
-        -webkit-backface-visibility: hidden;
-        -webkit-transform-style: preserve-3d;
-        -webkit-transform: translate3d(0, 0, 0); }
-      #content .action .wrapper form [placeholder]:focus::-webkit-input-placeholder {
-        -webkit-transition: all, 0.2s, ease;
-        -moz-transition: all, 0.2s, ease;
-        transition: all, 0.2s, ease;
-        -webkit-transform: translate(5%, 0);
-        -moz-transform: translate(5%, 0);
-        -ms-transform: translate(5%, 0);
-        -o-transform: translate(5%, 0);
-        transform: translate(5%, 0);
-        opacity: 0; }
-  #content .action .countdown {
-    text-transform: uppercase; }
-    #content .action .countdown:after {
-      content: "";
-      display: table;
-      clear: both; }
-    #content .action .countdown span {
-      display: inline-block;
-      font-size: 14px;
-      font-size: 1.4rem;
-      margin: 0 40px 10px 40px;
-      text-align: center;
-      width: 70px; }
-      #content .action .countdown span strong {
-        color: #5399fc;
-        display: block;
-        font-weight: normal;
-        font-size: 46px;
-        font-size: 4.6rem;
-        line-height: 100%;
-        margin: 0 auto 5px; }
-    @media only screen and (max-width: 768px) {
-      #content .action .countdown span {
-        margin: 0 25px 10px 25px;
-        width: 60px; }
-        #content .action .countdown span strong {
-          font-size: 36px;
-          font-size: 3.6rem; } }
-  #content .action .line {
-    margin: 40px 0 50px 0;
-    width: 300px; }
-    @media only screen and (max-width: 768px) {
-      #content .action .line {
-        width: 260px; } }
-#content .info:after, #content .call:after {
-  content: "";
-  display: table;
-  clear: both; }
-#content .info .about, #content .info .map, #content .info .content, #content .info .speaker, #content .call .about, #content .call .map, #content .call .content, #content .call .speaker {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 50%; }
-  #content .info .about:nth-child(even), #content .info .map:nth-child(even), #content .info .content:nth-child(even), #content .info .speaker:nth-child(even), #content .call .about:nth-child(even), #content .call .map:nth-child(even), #content .call .content:nth-child(even), #content .call .speaker:nth-child(even) {
-    float: right;
-    padding: 70px 0 0 40px; }
-  #content .info .about:nth-child(odd), #content .info .map:nth-child(odd), #content .info .content:nth-child(odd), #content .info .speaker:nth-child(odd), #content .call .about:nth-child(odd), #content .call .map:nth-child(odd), #content .call .content:nth-child(odd), #content .call .speaker:nth-child(odd) {
-    float: left;
-    padding-right: 40px; }
-  @media only screen and (max-width: 768px) {
-    #content .info .about, #content .info .map, #content .info .content, #content .info .speaker, #content .call .about, #content .call .map, #content .call .content, #content .call .speaker {
-      width: 100%;
-      margin: 0px 0px 20px 0px;
-      padding: 0px !important; } }
-#content .info .about h2, #content .info .content h2, #content .call .about h2, #content .call .content h2 {
-  color: #5399fc;
-  font-size: 34px;
-  font-size: 3.4rem;
-  font-weight: normal;
-  margin-bottom: 15px; }
-  @media only screen and (max-width: 768px) {
-    #content .info .about h2, #content .info .content h2, #content .call .about h2, #content .call .content h2 {
-      margin-bottom: 10px;
-      text-align: center; } }
-#content .info .about p, #content .info .content p, #content .call .about p, #content .call .content p {
-  color: #4d4d4d;
-  font-size: 16px;
-  font-size: 1.6rem;
-  line-height: 200%; }
-#content .info .map, #content .info .speaker, #content .call .map, #content .call .speaker {
-  text-align: center;
-  margin: 0px; }
-  #content .info .map img, #content .info .speaker img, #content .call .map img, #content .call .speaker img {
-    max-width: 500px;
-    width: 100%; }
-#content .info .speaker img, #content .call .speaker img {
-  margin-bottom: 20px; }
-#content .call {
-  background: #5399fc; }
-  #content .call .content h2, #content .call .content p {
-    color: #FFFFFF; }
-  #content .call .content:nth-child(even) {
-    padding-top: 0px; }
-  #content .call .content a.button {
-    background: #fff;
-    border-radius: 5px;
-    color: #5399fc;
-    display: block;
-    margin-top: 30px;
-    padding: 10px;
-    width: 140px;
-    font-size: 16px;
-    font-size: 1.6rem; }
-    @media only screen and (max-width: 768px) {
-      #content .call .content a.button {
-        margin: 0 auto; } }
-    #content .call .content a.button:hover {
-      background: #EFEFEF; }
 
 /* Footer */
 #footer {
@@ -2343,7 +2061,7 @@ input:not([type=submit]), textarea {
         font-size: 1.8rem;
         height: 40px;
         line-height: 40px;
-        margin: 25px 0;
+        margin: 30px 0;
         padding: 0px 40px; }
       @media only screen and (max-width: 768px) {
         .index-launch .banner.second, .index-launch .banner.third {
@@ -2371,7 +2089,7 @@ input:not([type=submit]), textarea {
           background: #f1f1f1; }
   .index-launch .section {
     float: left;
-    padding: 100px 0;
+    padding: 140px 0;
     width: 100%;
     /* About */
     /* Speakers */
@@ -2380,7 +2098,7 @@ input:not([type=submit]), textarea {
     /* venue */ }
     .index-launch .section .title {
       float: left;
-      padding: 0 0 40px 0;
+      padding: 0 0 50px 0;
       width: 100%; }
       .index-launch .section .title h1 {
         color: #333;
@@ -2394,7 +2112,76 @@ input:not([type=submit]), textarea {
     .index-launch .section.about h1 {
       text-align: center; }
     .index-launch .section.about p {
-      line-height: 30px; }
+      float: left;
+      line-height: 30px;
+      width: 100%;
+      letter-spacing: 1px; }
+    .index-launch .section.about .timeline {
+      float: left;
+      margin: 100px 0 0;
+      position: relative;
+      width: 100%; }
+      .index-launch .section.about .timeline .wrapper:after {
+        content: "";
+        display: table;
+        clear: both; }
+      .index-launch .section.about .timeline .wrapper ul {
+        float: left;
+        list-style: none;
+        position: relative;
+        margin: 0px;
+        width: 100%; }
+        .index-launch .section.about .timeline .wrapper ul li {
+          background: url('/images/dot.jpg') repeat-x -3px center;
+          float: left;
+          width: 25%;
+          padding: 0px;
+          text-align: center; }
+          .index-launch .section.about .timeline .wrapper ul li a {
+            float: left;
+            position: relative;
+            width: 100%; }
+            .index-launch .section.about .timeline .wrapper ul li a h4 {
+              margin-bottom: 50px;
+              font-size: 18px;
+              font-size: 1.8rem;
+              white-space: nowrap;
+              -webkit-transition: all, 0.3s, ease;
+              -moz-transition: all, 0.3s, ease;
+              transition: all, 0.3s, ease; }
+              .index-launch .section.about .timeline .wrapper ul li a h4:after {
+                font-family: 'icons';
+                font-variant: normal;
+                font-weight: normal;
+                speak: none;
+                text-transform: none;
+                -webkit-font-smoothing: antialiased;
+                font-size: 12px;
+                font-size: 1.2rem;
+                content: "\e600";
+                position: absolute;
+                left: 50%;
+                margin-top: -12px;
+                margin-left: -5px;
+                top: 50%; }
+            .index-launch .section.about .timeline .wrapper ul li a em {
+              font-style: normal;
+              white-space: nowrap; }
+            .index-launch .section.about .timeline .wrapper ul li a:hover h4 {
+              color: #5399fc; }
+          .index-launch .section.about .timeline .wrapper ul li:first-child {
+            padding-left: 0px; }
+          .index-launch .section.about .timeline .wrapper ul li:last-child {
+            padding-right: 0px; }
+          .index-launch .section.about .timeline .wrapper ul li.active h4 {
+            color: #5399fc; }
+      .index-launch .section.about .timeline .line {
+        border-left: 2px solid #5399fc;
+        bottom: -100px;
+        content: '';
+        display: none;
+        height: 25px;
+        position: absolute; }
     .index-launch .section.speakers {
       background: #f8f8f8;
       padding-bottom: 0px; }
@@ -2556,11 +2343,7 @@ input:not([type=submit]), textarea {
                 font-size: 1.4rem;
                 text-decoration: underline; }
             .index-launch .section.schedule .wrapper .list ul li:hover {
-              background: #5399fc; }
-              .index-launch .section.schedule .wrapper .list ul li:hover p {
-                color: #000; }
-              .index-launch .section.schedule .wrapper .list ul li:hover a {
-                color: #fff; }
+              background: #d0e3fe; }
         @media only screen and (max-width: 768px) {
           .index-launch .section.schedule .wrapper .list {
             width: 100%; } }
@@ -2573,6 +2356,7 @@ input:not([type=submit]), textarea {
         height: 100px;
         position: relative;
         padding: 10px 8px;
+        margin-bottom: 40px;
         width: 300px; }
         .index-launch .section.sponsers ul li a, .index-launch .section.mediaparter ul li a {
           float: left;
@@ -2583,9 +2367,14 @@ input:not([type=submit]), textarea {
             left: 0px;
             margin: auto;
             right: 0px;
-            top: 0px; }
+            top: 0px;
+            -webkit-transition: all, 0.2s, ease;
+            -moz-transition: all, 0.2s, ease;
+            transition: all, 0.2s, ease; }
             .index-launch .section.sponsers ul li a img:hover, .index-launch .section.mediaparter ul li a img:hover {
-              opacity: 0.9; }
+              opacity: 0.9;
+              -webkit-filter: grayscale(0);
+              filter: grayscale(0); }
     .index-launch .section.sponsers {
       padding-bottom: 0px; }
     .index-launch .section.venue {
@@ -2600,6 +2389,7 @@ input:not([type=submit]), textarea {
           font-size: 36px;
           font-size: 3.6rem;
           letter-spacing: 3px;
+          margin-bottom: 50px;
           text-transform: uppercase;
           word-spacing: 8px; }
         .index-launch .section.venue .wrapper .left h4 {
