--- a/templates/partials/_favicons.html
+++ b/templates/partials/_favicons.html
@@ -1,4 +1,4 @@
-<link rel='shortcut icon' href='/assets/favicons/favicon.ico'>
+<!-- <link rel='shortcut icon' href='/assets/favicons/favicon.ico'>
 <link rel='apple-touch-icon' sizes='57x57' href='/assets/favicons/apple-touch-icon-57x57.png'>
 <link rel='apple-touch-icon' sizes='114x114' href='/assets/favicons/apple-touch-icon-114x114.png'>
 <link rel='apple-touch-icon' sizes='72x72' href='/assets/favicons/apple-touch-icon-72x72.png'>
@@ -14,4 +14,4 @@
 <link rel='icon' type='image/png' href='/assets/favicons/favicon-32x32.png' sizes='32x32'>
 <meta name='msapplication-TileColor' content='#da532c'>
 <meta name='msapplication-TileImage' content='/assets/favicons/mstile-144x144.png'>
-<meta name='msapplication-config' content='/assets/favicons/browserconfig.xml'>
+<meta name='msapplication-config' content='/assets/favicons/browserconfig.xml'> -->
