add a few more logos

--- a/templates/index.html
+++ b/templates/index.html
@@ -360,6 +360,8 @@
       <li><a href='https://coding.net/' target='new'><img src='/images/coding.png' width='250' /></a></li>
       <li><a href='http://careers.ef.com/categories/technology/learning-labs/' target='new'><img src='/images/ef.png' width='130' /></a></li>
       <li><a href='https://coding.net/' target='new'><img src='/images/teambition.png' width='250' /></a></li>
+      <li><a href='http://makeblock.cc' target='new'><img src='/images/makeblock.jpg' width='250' /></a></li>
+
     </ul>
     </div>
   </section>
@@ -372,6 +374,8 @@
     <ul>
       <li><a href='http://segmentfault.com/' target='new'><img src='/images/sf.png' width='250' /></a></li>
       <li><a href='https://knewone.com/' target='new'><img src='/images/knewone.png' width="250" /></a></li>
+      <li><a href='http://www.ituring.com.cn/' target='new'><img src='/images/turing.jpg' width='250' /></a></li>
+      <li><a href='http://www.broadview.com.cn/' target='new'><img src='/images/broadview.png' width='250' /></a></li>
     </ul>
     </div>
   </section>
